--- a/FileExplorer/Properties/Resources.tr.resx
+++ b/FileExplorer/Properties/Resources.tr.resx
@@ -764,11 +764,8 @@ Kaydırma sırasında, dosyalar ve klasörler arka planda yüklenirken bulanıkl
   <data name="Level" xml:space="preserve">
     <value>Seviye</value>
   </data>
-  <data name="Total" xml:space="preserve">
-    <value>Toplam</value>
-  </data>
-  <data name="Selected" xml:space="preserve">
-    <value>Seçili</value>
+  <data name="SelectedFromat" xml:space="preserve">
+    <value>Seçili: {0}</value>
   </data>
   <data name="FrameWidth" xml:space="preserve">
     <value>Resim/Video Genişliği</value>
