--- a/FileExplorer/Properties/Resources.tr.resx
+++ b/FileExplorer/Properties/Resources.tr.resx
@@ -899,4 +899,49 @@ Kaydırma sırasında, dosyalar ve klasörler arka planda yüklenirken bulanıkl
   <data name="AutoRestoreSelection" xml:space="preserve">
     <value>Seçimi Her Zaman Geri Yükle</value>
   </data>
+  <data name="DateDeleted" xml:space="preserve">
+    <value>Silinme Tarihi</value>
+  </data>
+  <data name="OriginalLocation" xml:space="preserve">
+    <value>Önceki Konum</value>
+  </data>
+  <data name="RecycleBin" xml:space="preserve">
+    <value>Geri Dönüşüm Kutusu</value>
+  </data>
+  <data name="EmptyRecycleBin" xml:space="preserve">
+    <value>Geri Dönüşüm Kutusu'nu Boşalt</value>
+  </data>
+  <data name="Restore" xml:space="preserve">
+    <value>Geri Yükle</value>
+  </data>
+  <data name="RestoreAll" xml:space="preserve">
+    <value>Hepsini Geri Yükle</value>
+  </data>
+  <data name="Text" xml:space="preserve">
+    <value>Metin</value>
+  </data>
+  <data name="Integer" xml:space="preserve">
+    <value>Tamsayı</value>
+  </data>
+  <data name="Decimal" xml:space="preserve">
+    <value>Ondalık Sayı</value>
+  </data>
+  <data name="DateTime" xml:space="preserve">
+    <value>Tarih &amp; Saat </value>
+  </data>
+  <data name="Boolean" xml:space="preserve">
+    <value>Doğru / Yanlış</value>
+  </data>
+  <data name="Selection" xml:space="preserve">
+    <value>Seçim</value>
+  </data>
+  <data name="RecycleBinProperties" xml:space="preserve">
+    <value>Geri Dönüşüm Kutusu Özellikleri</value>
+  </data>
+  <data name="Manage" xml:space="preserve">
+    <value>Yönet</value>
+  </data>
+  <data name="RestoreSelected" xml:space="preserve">
+    <value>Seçilenleri Geri Yükle</value>
+  </data>
 </root>
